add connection to db

--- a/AspNetCoreTemplate.Web/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/AspNetCoreTemplate.Web/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using AspNetCoreTemplate.Web.Areas.Identity
 @using AspNetCoreTemplate.Web.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using AspNetCoreTemplate.Infrastructure.Models
